--- a/Feels/pom.xml
+++ b/Feels/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>hadoop-statistics</artifactId>
+    <artifactId>hadoop-feels</artifactId>
 
     <dependencies>
         <dependency>
@@ -36,15 +36,13 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>net.darkseraphim.webanalytics.hadoop.statistics.Main</mainClass>
+                                    <mainClass>net.darkseraphim.webanalytics.hadoop.feels.Main</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
                     </execution>
                 </executions>
-
             </plugin>
         </plugins>
     </build>
-
 </project>
